--- a/main.css
+++ b/main.css
@@ -1,5 +1,27 @@
 #canvas {
-    height: 250px;
-    width: 250px;
+    height: 200px;
+    width: 200px;
     border: 1px solid black;
+}
+
+.color-block {
+    height: 20px;
+    width: 20px;
+    display: inline-block;
+}
+
+.blue {
+    background: blue;
+}
+
+.red {
+    background: red;;
+}
+
+.green {
+    background: green;
+}
+
+.yellow {
+    background: yellow;
 }
